# mcp-facturacion-electronica-es

./: .gitignore  Makefile  README.es.md  README.md  RELEASE.md  pyproject.toml  server.json
.github/workflows/: publish.yml
audit/: audit_vs_core.py  report.json
mcp_facturacion_electronica_es/: __init__.py  _helpers.py  config.py  server.py
mcp_facturacion_electronica_es/models/: es.py
mcp_facturacion_electronica_es/tools/: __init__.py  b2b.py  facturae.py  sii.py  ticketbai.py  utils.py  verifactu.py
specs/: README.md
specs/facturae/xslt/: visor-facturae-3-2-1.xslt  visor-facturae-3-2-2.xsl
src/mcp_facturacion_electronica_es/: __init__.py  _helpers.py  server.py
src/mcp_facturacion_electronica_es/models/: __init__.py  es.py
src/mcp_facturacion_electronica_es/tools/: b2b.py  facturae.py  sii.py  utils.py  verifactu.py
tests/: conftest.py  test_facturae.py  test_models.py  test_signing_redaction.py  test_sii.py  test_sii_envelope_structure.py  test_utils.py  test_verifactu.py
tests/integration/: README.md  test_face_sandbox.py  test_sii_sandbox.py
