[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-facturacion-electronica-es"
version = "0.1.0"
description = "MCP server for Spanish electronic invoicing (VERI*FACTU, Facturae/FACe, SII, TicketBAI, Crea y Crece B2B)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "cmendezs" }]
requires-python = ">=3.11"
keywords = [
    "mcp",
    "e-invoicing",
    "facturacion-electronica",
    "verifactu",
    "facturae",
    "sii",
    "ticketbai",
    "spain",
    "aeat",
    "face",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp-einvoicing-core>=0.6.0,<1.0.0",
    "pydantic>=2.0.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    # QR code generation for VERI*FACTU mandatory QR (HAC/1177/2024 Art. 10)
    "qrcode[pil]>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "lxml-stubs>=0.5.0",
    "types-python-dateutil>=2.9.0",
    "types-qrcode>=0.0.5",
]

[project.scripts]
mcp-facturacion-electronica-es = "mcp_facturacion_electronica_es.server:main"

[project.urls]
Homepage = "https://github.com/cmendezs/mcp-facturacion-electronica-es"
Repository = "https://github.com/cmendezs/mcp-facturacion-electronica-es"
Issues = "https://github.com/cmendezs/mcp-facturacion-electronica-es/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcp_facturacion_electronica_es"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mcp_facturacion_electronica_es --cov-report=term-missing"

[tool.coverage.run]
source = ["mcp_facturacion_electronica_es"]
omit = ["tests/*"]
